fixed display issues in mobile versions by adding overflow: auto to main content element

--- a/game.css
+++ b/game.css
@@ -16,6 +16,7 @@ body{
     align-items: center;
     flex-direction: column;
     padding-top: 1em;
+    overflow: auto;
 } 
 #grid-container{
     display: grid;
@@ -25,6 +26,7 @@ body{
     aspect-ratio: 4/3;
     max-width: 100vw;
     max-height: 100vh;
+
 }
 .grid-item{
     width: min-content;
@@ -66,6 +68,9 @@ body{
 }
 .player-info.top{
     width: 60px;
+    padding-right: 15em;
+}
+.player-info.main-user{
     padding-right: 15em;
 }
 .player-icon{
@@ -111,6 +116,6 @@ body{
 }
 
 @media (max-width: 600px) {
-    
+  
 
   }
