--- a/index.css
+++ b/index.css
@@ -10,9 +10,11 @@
     background-color: #dbd9d9;
     height: calc(100vh - 80px);
     display: flex;
+    text-align: center;
     align-items: center;
     flex-direction: column;
     padding-top:1em;
+    overflow: auto;
 } 
 #login{
     display:flex;
