--- a/join.css
+++ b/join.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     padding-top: 1em;
     padding-left: 1em;
+    overflow: auto;
 } 
 #active-games{
     background-color: white;
