--- a/match-history.css
+++ b/match-history.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     padding-top: 1em;
     padding-left: 1em;
+    overflow:auto;
 } 
 #game-win{
     color: green;
